--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,11 @@
   <h1>Age Calculator</h1>
   <form action="/calculate-age" method="post">
     <label for="birthYear">Birth Year:</label>
-    <input type="number" id="birthYear" name="birthYear"><br><br>
+    <input type="number" id="birthYear" name="birthYear" required><br><br>
     <label for="birthMonth">Birth Month:</label>
-    <input type="number" id="birthMonth" name="birthMonth"><br><br>
+    <input type="number" id="birthMonth" name="birthMonth" required><br><br>
     <label for="birthDay">Birth Day:</label>
-    <input type="number" id="birthDay" name="birthDay"><br><br>
+    <input type="number" id="birthDay" name="birthDay" required><br><br>
 
 
     <input type="date" id="data" name="date1"><br><br>
